# Minds_AI_EEG_Filter

./: .gitignore  CITATION.cff  LICENSE  MindsAI_EEG_Documentation.ipynb  MindsAI_EEG_Documentation.md  MindsAI_EEG_Documentation_2.md  MindsAI_EEG_Documentation_3.md  MindsAI_EEG_Documentation_4.md  MindsAI_EEG_Documentation_5.md  MindsAI_EEG_Documentation_6.md  MindsAI_EEG_Documentation_6_FIXED.md  MindsAI_EEG_Documentation_7.md  MindsAI_EEG_Documentation_FIXED.md  MindsAI_EEG_Documentation_v2.md  PATENTS.md  README.md  pyproject.toml  requirements.txt
Languages/Python_3.10/mindsai_filter_python/: filter.pyd
Languages/Python_3.11/mindsai_filter_python/: filter.pyd
csharp/: MindsAI_SignalFiltering_CSharp.csproj  MindsAI_SignalFiltering_CSharp.sln  Program.cs
examples/: Minds_AI_Filter_Offline_Signal_Analysis.py  Minds_AI_Filter_Real-time_Signal_Analysis.py
examples/data/: EEG.csv  EEG_Chat.csv  EEG_openbci.csv  data_mai_metrics_1e-34_20251017T030538.json  eeg_mai_filtered_1e-33_20251002T025903.csv  eeg_mai_metrics_1e-33_20251002T025903.json
language/Python_3.11/mindsai_filter_python/: __init__.py
mindsai_filter_python/: __init__.py  core.py
python/: DLL_Real-time_Analysis_Python.py  MindsAI_SignalFiltering_Python.py  Minds_AI_Filter_Real-time_Signal_Analysis.py
