[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindsai-filter-python"
version = "1.1.0"
description = "Minds AI physics-based signal filter package for real-time and offline EEG (Python)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "MindsApplied" }]
license = { text = "PolyForm-Noncommercial-1.0.0" }

dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",         # hilbert
  "scikit-learn>=1.2",   # BaseEstimator, TransformerMixin, fit_transform
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["mindsai_filter_python*"]
exclude = ["examples*", "images*", "docs*", "tests*"]

[project.optional-dependencies]
examples = [
  "matplotlib>=3.7",
  "brainflow",          
]

[project.urls]
Homepage = "https://github.com/MindsApplied/Minds_AI_EEG_Filter"


